# testing-intelligence-assistant

./: CHANGELOG.md  LICENSE  README.md  install.ps1  pyproject.toml  requirements.txt  setup.py  temp.md
docs/: install.md
research/docs/phase 1/: phase1-1 select model  phase1-2 select framework
src/: __init__.py
src/agent/: agent_core.py  prompts.py  tools.py
src/client/: api.py  cli.py.py
src/config/: logging_config.py  setting.py
src/llm/: llm_config.py  llm_interface.py
src/mcp/: context_manager.py  embedding_utils.py  memory.py
src/utils/: helpers.py  logger.py
tests/: Model_trainings_file.py  practice1_workflow.py
tests/Agent/: code_generator_stdio.py  rag.py  server_mcp_stdio.py
tests/Testrack Assistant/: _messages.csv  _stss.csv  _warnings_stss.csv  _warnings_type_definition.csv  config.json  config.yaml  mcp_tool.py  rag_tool.py  tia.py  tia_v2.py  tia_v3.py
tests/Testrack Assistant/context/files/: Manufacturing_Handbook.docx  Manufacturing_Handbook.txt  Practice1.md  Prompt v1.txt  STSS _4x4 Unable to Disengage Warning SRS 0.1.csv  Table - P703_Raptor_U704 MY26 Warning Generic Application GML 131 v2.0.xlsx  Warning - 4x4 Unable to Disengage - CGEA1.3_v1.0.docx  _config.csv  _keywords.csv  _receive.csv  _warning_json_structure.md  _warnings.csv  _warnings_propierties.csv  html_4x4 Shift in Progress and 4x4 Shifting Instructions Warning SRD 0.1.html  indicator.md  indicator_class.py  indicator_json_structure.txt  indicators.csv  indicators_stss.csv  warning_json_structure.json  warning_json_structure.txt
tests/Testrack Assistant/context/files/html_4x4 Shift in Progress and 4x4 Shifting Instructions Warning SRD 0.1_files/: common.css  css  print.css  print.js.download
tests/Testrack Assistant/context/files/indicators/: IND-FTR-Disable.py  IND-FTR-Enable.py  IND-FTR-Flash Rate.py  IND-FTR-High Voltage.py  IND-FTR-Ignition Modes.py  IND-FTR-Low Voltage.py  IND-FTR-Proveout.py  IND-FTR-Warning process mask.py  IND-NET-Invalid.py  IND-NET-Missing.py  IND-NET-Never Received.py
tests/Testrack Assistant/files/: _warnings_propierties.csv  warnings_type_definition.md
tests/exercises 1/MCP/Client/: client_sse.py  ollama_client.py  openai_client.py
tests/exercises 1/MCP/Server/: weather.py  weather_sse.py
tests/exercises 1/llamaindex/: Requirements.md  advanced_rag.py  basic_agent.py  basic_inference.py  basic_rag.py  basic_workflow.py  practice1_flow_all.html  practice1_flow_recent.html
tests/exercises 1/llamaindex/docs/: CommonIssuesAndFAQ.md  DevNextIniFile.md  Introduction.md  SupportedPrograms.md
tests/exercises 1/llamaindex/output/report/: report.md
tests/exercises 1/llamaindex/output/src/: main.py
tests/exercises 1/llamaindex/output/test/: test_cases.md
tests/exercises 1/llamaindex/support/: MarkItDownReader.py
tests/exercises 1/llamaindex/vector_database/: chroma.sqlite3
tests/exercises 1/practice1/: Practice1.md
tests/exercises 1/practice1/ai/CodeGenerator/: code_generator.py
tests/exercises 1/practice1/ai/MCPServers/: filesystem_server.py  script_executor_server.py
tests/exercises 1/practice1/ai/TestCaseGenerator/: test_generation.py
tests/exercises 1/practice1/input/: Requirements.md
tests/exercises 1/rag/: ollama_graphrag.py  ollama_rag.py
tests/practice1/: Model_client.py  Practice1.md
(+4 files in other folders)
